# am-api

./: Cargo.toml  README.md
am-api/: Cargo.toml
am-api-proc-macro/: Cargo.toml
am-api-proc-macro/src/: lib.rs
am-api-proc-macro/src/context_container/: attribute.rs  mod.rs
am-api-proc-macro/src/resource_property/: attribute.rs  mod.rs
am-api/src/: error.rs  lib.rs  primitive.rs
am-api/src/request/: builder.rs  context.rs  extension.rs  mod.rs  paginated.rs  relationship.rs  view.rs
am-api/src/resource/: artwork.rs  attributes.rs  genre.rs  history.rs  mod.rs  personal_recommendation.rs  rating.rs  relationship.rs  storefront.rs  view.rs
am-api/src/resource/catalog/: activity.rs  album.rs  artist.rs  curator.rs  mod.rs  music_video.rs  playlist.rs  record_label.rs  search.rs  song.rs  station.rs
am-api/src/time/: mod.rs  year_or_date.rs
am-api/tests/: album.rs  artist.rs  common.rs  curator.rs  genre.rs  library.rs  library_playlist.rs  music_video.rs  playlist.rs  record_label.rs  search.rs  song.rs  station.rs  storefront.rs
