[workspace]
resolver = "2"
members = ["am-api", "am-api-proc-macro"]

[workspace.package]
version = "1.0.0"
authors = ["localcc"]
edition = "2021"
license = "MIT"
description = "A library for interfacing with the Apple Music API"
homepage = "https://github.com/localcc/am-api"
documentation = "https://docs.rs/am-api"
repository = "https://github.com/localcc/am-api"
keywords = ["api", "apple-music", "music", "async", "musickit"]
categories = ["api-bindings"]

[workspace.dependencies]
am-api = { path = "./am-api", version = "1.0.0" }
am-api-proc-macro = { path = "./am-api-proc-macro", version = "1.0.0" }

tokio = { version = "1.34.0", features = ["full"] }
thiserror = "1.0.50"

serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"